#-------------------
# LoRaWAN library
#-------------------
file(GLOB LORAWAN_SRC
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Crypto/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/LmHandler/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/LmHandler/packages/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Mac/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Mac/region/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Patterns/Basic/*.c"
    "${PROJECT_SOURCE_DIR}/lib/Utilities/*.c"
    "${PROJECT_SOURCE_DIR}/lib/Utilities/baremetal/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_BSP/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Utilities/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf/*.c"
    "${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/SubGHz_Phy/stm32_radio_driver/*.c"

    )
add_library(lorawan STATIC
    ${LORAWAN_SRC}
    )
target_include_directories(lorawan
    PUBLIC
    ${PROJECT_SOURCE_DIR}/${HAL_DIR}/Inc
    ${PROJECT_SOURCE_DIR}/${MCU_DIR}/Include
    ${PROJECT_SOURCE_DIR}/${CMSIS_DIR}/Core/Include
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Crypto
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/LmHandler
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/LmHandler/packages
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Mac
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Mac/region
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Patterns/Basic
    ${PROJECT_SOURCE_DIR}/lib/Utilities
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf
    ${PROJECT_SOURCE_DIR}/lib/Utilities/baremetal
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/LoRaWAN/Utilities
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/SubGHz_Phy
    ${PROJECT_SOURCE_DIR}/${LORAWAN_DIR}/SubGHz_Phy/stm32_radio_driver
    PRIVATE
    ${PROJECT_SOURCE_DIR}/target
    ${PROJECT_SOURCE_DIR}/app/sensors_lorawan/conf
    ${PROJECT_SOURCE_DIR}/app/sensors_lorawan
    ${PROJECT_SOURCE_DIR}/lib/GNSE_BSP
    )
target_compile_definitions(lorawan
    PUBLIC
    ${MCU}
    )
#-------------------
# Main elf
#-------------------
file(GLOB MAIN_SRC
        "${PROJECT_SOURCE_DIR}/app/app_common/*.c"
        "${PROJECT_SOURCE_DIR}/app/sensors_lorawan/*.c"
        "${PROJECT_SOURCE_DIR}/target/*.c"
        "${PROJECT_SOURCE_DIR}/lib/GNSE_BSP/*.c"
        "${PROJECT_SOURCE_DIR}/lib/GNSE_HAL/*.c"
        "${PROJECT_SOURCE_DIR}/lib/SPIFFS/*.c"
        "${PROJECT_SOURCE_DIR}/lib/Utilities/*.c"
        "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer/*.c"
        "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf/*.c"
        "${PROJECT_SOURCE_DIR}/lib/Utilities/baremetal/*.c"
        "${PROJECT_SOURCE_DIR}/lib/SHTC3/*.c"
        "${PROJECT_SOURCE_DIR}/lib/MX25R1635/*.c"
        "${PROJECT_SOURCE_DIR}/lib/LIS2DH12/*.c"
        "${PROJECT_SOURCE_DIR}/lib/BUZZER/*.c"
        )
set(SOURCES
    ${MAIN_SRC}
    ${PROJECT_SOURCE_DIR}/${STARTUP_FILE}
    ${PROJECT_SOURCE_DIR}/${SYSTEM_FILE}
    )
add_executable(${PROJECT_NAME}.elf
    ${SOURCES}
    )
target_include_directories(${PROJECT_NAME}.elf
    PUBLIC
    ${PROJECT_SOURCE_DIR}/target
    ${PROJECT_SOURCE_DIR}/app
    ${PROJECT_SOURCE_DIR}/app/app_common
    ${PROJECT_SOURCE_DIR}/app/sensors_lorawan
    ${PROJECT_SOURCE_DIR}/app/sensors_lorawan/conf
    ${PROJECT_SOURCE_DIR}/app/sensors_lorawan
    ${PROJECT_SOURCE_DIR}/lib/GNSE_BSP
    ${PROJECT_SOURCE_DIR}/lib/GNSE_HAL
    ${PROJECT_SOURCE_DIR}/lib/SPIFFS
    ${PROJECT_SOURCE_DIR}/lib/Utilities
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf
    ${PROJECT_SOURCE_DIR}/lib/Utilities/baremetal
    ${PROJECT_SOURCE_DIR}/lib/SHTC3
    ${PROJECT_SOURCE_DIR}/lib/MX25R1635
    ${PROJECT_SOURCE_DIR}/lib/LIS2DH12
    ${PROJECT_SOURCE_DIR}/lib/BUZZER
    )
target_link_libraries(${PROJECT_NAME}.elf
    PUBLIC
    hal
    lorawan
    )
